--- a/html/index.html
+++ b/html/index.html
@@ -9,11 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
-    <link href="https://students.washington.edu/hchan101/final/css/jb.css" rel="stylesheet">
+    <link href="/css/jb.css" rel="stylesheet">
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="/Users/hok/Desktop/Code/Final/js/jb.js"></script>
+    <script src="/jb.js"></script>
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -55,9 +55,10 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.basketball-reference.com/players/b/butleji01.html">Stats</a>
+                        <a class="nav-link"
+                            href="https://www.basketball-reference.com/players/b/butleji01.html">Stats</a>
                     </li>
-   
+
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -77,19 +78,18 @@
             <hr class="my-4">
             <p>Jimmy Butler is a professional basketball player whose career is defined by grit, determination, and
                 leadership. Born on September 14, 1989, in Houston, Texas, Butler's journey to stardom <span
-                    id="dots">...</span><span id="more">has been nothing short of remarkable.
-                    After a standout college career at Marquette University, he was selected as the 30th overall pick by
-                    the
-                    Chicago Bulls in the 2011 NBA Draft. Since then, Butler's relentless work ethic and tenacious
-                    playing
-                    style have earned him numerous accolades, including multiple All-Star selections and All-Defensive
-                    Team
-                    honors. Known for his clutch performances and ability to rise to the occasion, Butler has become a
-                    force
-                    to be reckoned with on the court. With his unwavering dedication and unwavering commitment to
-                    excellence, Jimmy Butler has carved out an enduring legacy in the world of basketball, inspiring
-                    fans
-                    and aspiring athletes alike.</span></p>
+                    id="dots">...</span><span id="more">has been nothing short of remarkable. After a standout college
+                    career at Marquette University, he was selected as the 30th overall pick by the Chicago Bulls in the
+                    2011 NBA Draft. Since then, Butler's relentless work ethic and tenacious playing style have earned
+                    him numerous accolades, including multiple All-Star selections and All-Defensive Team honors. Known
+                    for his clutch performances and ability to rise to the occasion, Butler has become a force to be
+                    reckoned with on the court. With his unwavering dedication and unwavering commitment to excellence,
+                    Jimmy Butler has carved out an enduring legacy in the world of basketball, inspiring fans and
+                    aspiring athletes alike.</span></p>
+
+
+            <!-- Include the external JavaScript file -->
+            <script src="/js/jb.js"></script>
             <p class="lead">
                 <a class="btn btn-primary btn-lg" href="#" role="button" onclick="toggleContent()" id="myBtn">Learn
                     more</a>
