--- a/html/76er.html
+++ b/html/76er.html
@@ -24,7 +24,7 @@
             <div class="container-fluid">
                 <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0e/Philadelphia_76ers_logo.svg/1920px-Philadelphia_76ers_logo.svg.png"
                     alt="https://sports.cbsimg.net/fly/images/nba/logos/team/346.svg" , width="100" ,heigth="100">
-                <a class="navbar-brand" href="Jimmy Butler.html">Jimmy Butler </a>
+                <a class="navbar-brand" href="index.html">Jimmy Butler </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
