--- a/html/bulls.html
+++ b/html/bulls.html
@@ -21,7 +21,7 @@
             <div class="container-fluid">
                 <img src="https://cdn.mos.cms.futurecdn.net/8227s5kMEx84YEHWLbxCb4-1920-80.jpg.webp"
                     alt="https://sports.cbsimg.net/fly/images/nba/logos/team/346.svg" , width="100" ,heigth="100">
-                <a class="navbar-brand" href="Jimmy Butler.html">Jimmy Butler </a>
+                <a class="navbar-brand" href="index.html">Jimmy Butler </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
